@@ -15,6 +15,20 @@
 
 <blockquote>
 <h3><font color="yellow">NEWS FLASH!</font></h3>
+FVWM.ORG is back online!
+<p>
+The remnants of tropical storm Allison which have been ravaging the gulf
+and east coasts of the United States gave the University of Houston a
+present to the tune of more than twelve feet of water in some places.  The
+servers hosting fvwm.org are on the sixth floor and thus were safe from
+rising waters, but the building housing the servers
+suffered significant damage to
+its power delivery system and will be without electricity for up to ten
+weeks.
+<p>
+Once power was restored to parts of campus, the servers were relocated to
+get things running again.   Currently all fvwm.org services are up and
+running and will be for the foreseeable future.
 <p>
 <!--FVWM 2.4.0, an official release, is now available for download!-->
 FVWM 2.3.32, a stable candidate release is now available for download!
