@@ -1,3 +1,7 @@
+2001-06-20  Dan Espen  <dane@mk.telcordia.com>
+
+	* index.html: News about fvwm.org's status.
+
 2001-05-10  Mikhael Goikhman  <migo@homemail.com>
 
 	* generated/{FAQ,NEWS}.html: regenerated
